--- a/src/components/css/HomeScreen.css
+++ b/src/components/css/HomeScreen.css
@@ -282,6 +282,9 @@ h1 {
   justify-content: space-between;
   border-radius: 20px;
   height: 100%;
+  background: transparent !important;
+  box-shadow: none !important;
+  border: 1px solid #181c24;
 }
 
 .box-content h2 {
