--- a/src/components/css/Strategy.css
+++ b/src/components/css/Strategy.css
@@ -200,3 +200,47 @@
     grid-template-columns: 1fr;
   }
 }
+
+@media (max-width: 600px) {
+  .usp-container {
+    padding: 0;
+    margin: 0;
+  }
+  .usp-grid {
+    grid-template-columns: 1fr;
+    gap: 1.5rem;
+    margin: 0;
+    padding: 0;
+  }
+  .usp-card {
+    margin: 0 8px 18px 8px;
+    width: calc(100% - 16px);
+    box-sizing: border-box;
+    padding: 1rem;
+    background: rgb(236 229 229 / 10%);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 15px;
+    min-height: 100px;
+    transition: transform 0.3s ease;
+    animation: slideInFromRight 0.8s ease-out forwards;
+  }
+  .usp-card-title {
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #fff;
+    font-family: 'Urbanist';
+  }
+  .usp-card-desc {
+    font-family: 'Urbanist';
+    font-size: 0.9rem;
+    color: #ccc;
+    line-height: 1.6;
+    text-align: justify;
+  }
+  .usp-subtitle {
+    text-align: justify !important;
+    width: 90%;
+    margin: 0 auto;
+  }
+}
